theme.css
/* ... */
.nav-file-title.is-active {
	color: var(--text-normal);
}

/* Checkboxes */
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="-"],
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="-"] {
	text-decoration: line-through;
	color: var(--red);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="-"] input,
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="-"] input {
	border-color: var(--red);
	background-color: var(--red);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="/"],
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="/"] {
	text-decoration: underline;
	color: var(--cyan);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="/"] input,
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="/"] input {
	border-color: var(--cyan);
	background-color: var(--black);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="!"],
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="!"] {
	text-decoration: none;
	color: var(--orange);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="!"] input,
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="!"] input {
	border-color: var(--orange);
	background-color: var(--black);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="?"],
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="?"] {
	text-decoration: none;
	color: var(--blue);
}

.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="?"] input,
.markdown-source-view.mod-cm6 .HyperMD-task-line[data-task="?"] input {
	border-color: var(--blue);
	background-color: var(--black);
}


/* Tables */
.markdown-rendered table { border: 1px solid var(--background-modifier-border); }

.markdown-rendered th {
	background-color: var(--code-background);
	color: var(--text-accent);
}

.markdown-rendered td { border: 1px solid var(--background-modifier-border); }

/* Callouts */
.cm-callout .callout[data-callout="note"] {
	background-color: var(--blue-bright-transparent);
}

.cm-callout .callout[data-callout="note"] .callout-title {
	color: var(--blue-bright);
}

.cm-callout .callout[data-callout="info"] {
	background-color: var(--cyan-transparent);
}

.cm-callout .callout[data-callout="info"] .callout-title {
	color: var(--cyan);
}

.cm-callout .callout[data-callout="todo"] {
	background-color: var(--magenta-transparent);
}

.cm-callout .callout[data-callout="todo"] .callout-title {
	color: var(--magenta);
}

.cm-callout .callout[data-callout="warning"] {
	background-color: var(--orange-transparent);
}

.cm-callout .callout[data-callout="warning"] .callout-title {
	color: var(--orange);
}

.cm-callout .callout[data-callout="tip"] {
	background-color: var(--green-transparent);
}

.cm-callout .callout[data-callout="tip"] .callout-title {
	color: var(--green);
}

.cm-callout .callout[data-callout="example"] {
	background-color: var(--purple-transparent);
}

.cm-callout .callout[data-callout="example"] .callout-title {
	color: var(--purple);
}


/* Modal dialogs */
.modal {
	background-color: var(--background-primary);
	border: 2px solid var(--magenta);
}

.modal-close-button.clickable-icon:hover {
	color: var(--magenta) !important;
    background-color: var(--icon-background-hover);
}

.modal .vertical-tab-header-group-title {
	color: var(--magenta);
}

.modal .vertical-tab-nav-item:hover {
	color: var(--magenta);
	background-color: var(--magenta-transparent);
	cursor: pointer;
}

.modal button {
	cursor: pointer;
	color: var(--cyan);
	background-color: var(--cyan-transparent);
}

.modal button:hover,
.modal .clickable-icon:hover {
	color: var(--magenta);
	background-color: var(--magenta-transparent);
}

.modal button.mod-cta {
	cursor: pointer;
	color: var(--grey-9);
	background-color: var(--cyan);
}

.modal button.mod-cta:hover {
	background-color: var(--magenta);
}

.modal .checkbox-container.is-enabled {
	background-color: var(--magenta);
}

.modal .setting-hotkey {
	color: var(--yellow);
	background-color: var(--yellow-transparent);
	padding: 4px 8px 2px;
}

.modal .setting-hotkey:hover {
	color: var(--purple);
	background-color: var(--purple-transparent);
}

.modal .dropdown,
.dropdown,
select,
select:hover,
select:focus,
select:focus-visible,
select:focus-within,	
select:active {
	color: var(--black) !important;
	background-color: var(--magenta) !important;
	cursor: pointer;
}

.modal .dropdown option,
.dropdown option,
select option {
	color: var(--black);
	background-color: var(--magenta-transparent);
	cursor: pointer;
}

.modal .dropdown::-webkit-scrollbar-thumb,
.dropdown::-webkit-scrollbar-thumb,
select::-webkit-scrollbar-thumb {
	background-color: var(--black) !important;
}

.modal .dropdown option:hover,
.modal .dropdown option:checked,
.dropdown option:hover,
.dropdown option:checked,
select option:hover,
select option:checked {
	background-color: var(--cyan) !important;
}

.model .setting-item-description {
	color: var(--text-disabled);
}

.modal input:hover {
	border-color: var(--cyan-transparent);
}

.prompt {
	border-color: var(--magenta);
}

.prompt-instruction-command {
	color: var(--code-normal);
	padding: 4px 8px;
	background-color: var(--black);
	border-radius: 4px;
}

.search-input-clear-button {
	color: var(--cyan);
	cursor: pointer;
}

.search-input-clear-button:hover {
	color: var(--magenta);
}

input.prompt-input:hover,
input.prompt-input:focus,
input.prompt-input:focus-visible {
	background-color: var(--grey-11);
}


/* Tags */
.cm-line:has(.cm-hashtag:hover) .cm-hashtag {
	background-color: var(--magenta);
}

.markdown-reading-view .tag {
	color: var(--black);
} 


/* Horizontal Rule */
hr {
	border-color: var(--cyan);
}


/* Menus */
.menu {
	background-color: var(--black);
	border: 1px solid var(--cyan);
	border-radius: 5px;
}

.menu .clickable-icon {
	color: var(--cyan);
	background-color: var(--black);
	cursor: pointer;
}

.menu .clickable-icon.bases-toolbar-menu-item-icon {
	background-color: transparent;
}
/* ... */

